jekyll footnotes are already in kramdown

--- a/_config.yml
+++ b/_config.yml
@@ -148,6 +148,7 @@ kramdown:
   hard_wrap: false
   auto_ids: true
   footnote_nr: 1
+  footnote_backlink: ' &#8632;'
   entity_output: as_char
   toc_levels: 1..6
   smart_quotes: lsquo,rsquo,ldquo,rdquo
@@ -174,7 +175,6 @@ gems:
   - jekyll-gist
   - jekyll-feed
   - jemoji
-  - jekyll/footnotes
 
 # mimic GitHub Pages with --safe
 whitelist:
