--- a/_config_prod.yml
+++ b/_config_prod.yml
@@ -38,5 +38,6 @@ exclude:
   - /test # ignore Minimal Mistakes /test
   - _posts/__notes.md
   - robots.txt
+  - _posts/2017-05-13-rp17-was-wird-meinungen-sind-wie-daten.md
 
 google_site_verification : 1TwKH7c-QhYqXsr6rCuld0ck3tE6BQvFVn-SCaBzNzY
