changed exclude path for docs and tests

--- a/_config_prod.yml
+++ b/_config_prod.yml
@@ -34,8 +34,8 @@ exclude:
   - Rakefile
   - README
   - tmp
-  - /docs # ignore Minimal Mistakes /docs
-  - /test # ignore Minimal Mistakes /test
+  - docs # ignore Minimal Mistakes /docs
+  - test # ignore Minimal Mistakes /test
   - _posts/__notes.md
   - robots.txt
   - _posts/2017-05-13-rp17-was-wird-meinungen-sind-wie-daten.md
