--- a/_config_local.yml
+++ b/_config_local.yml
@@ -34,8 +34,8 @@ exclude:
   - Rakefile
   - README
   - tmp
-  - /docs # ignore Minimal Mistakes /docs
-  - /test # ignore Minimal Mistakes /test
+  - docs # ignore Minimal Mistakes /docs
+  - test # ignore Minimal Mistakes /test
   - _posts/__notes.md
 
 # HTML Compression
