--- a/_config_prev.yml
+++ b/_config_prev.yml
@@ -31,8 +31,8 @@ exclude:
   - Rakefile
   - README
   - tmp
-  - /docs # ignore Minimal Mistakes /docs
-  - /test # ignore Minimal Mistakes /test
+  - docs # ignore Minimal Mistakes /docs
+  - test # ignore Minimal Mistakes /test
   - _posts/__notes.md
 
 # HTML Compression
