changed some author vars

--- a/_config.yml
+++ b/_config.yml
@@ -93,9 +93,9 @@ author:
   name             : "dev4223"
   avatar           : "/assets/images/avatar_s.jpg"
   bio              : "lerning all about data"
-  location         : "Berlin"
+  location         : 
   email            : "developer4223@gmail.com"
-  uri              : "http://ondata.work/uber/"
+  uri              : 
   bitbucket        :
   codepen          :
   dribbble         :
