--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: "Posts"
     url: /year-archive/
-  - title: "Suche"
-    url: /suche/
+  #- title: "Suche"
+  #  url: /suche/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   #- title: "Sitemap"
