--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,6 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
 # 
-
-minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
-
 # Site Settings
 locale                   : "de-DE"
 title                    : "ONDATA"
@@ -22,7 +19,7 @@ enforce_ssl              : "ondata.work"
 repository               : "dev4223/ondata" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 breadcrumbs              : false # true, false (default)
-minimal_mistakes_skin    : "default" # "air", "contrast", "dark", "dirt", "mint", "sunrise"
+minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 words_per_minute         : 140
 comments:
   provider               : "staticman_v2" # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "staticman_v2" "custom"
@@ -58,8 +55,7 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
 search                   : true # true, false (default)
-search_full_content      : true # true, false (default)
-
+search_full_content      : true # true, false (default) 
 
 # SEO Related
 google_site_verification :
@@ -198,6 +194,7 @@ timezone: "Europe/Berlin" # http://en.wikipedia.org/wiki/List_of_tz_database_tim
 
 # Plugins (previously gems:)
 plugins_dir:
+  - ./_plugins
   - jekyll-paginate-v2
   - jekyll-sitemap
   - jekyll-archives
