--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,9 @@ teaser                   : # path of fallback teaser image, e.g. "/assets/images
 breadcrumbs              : false # true, false (default)
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 words_per_minute         : 220
+masthead:
+  name                   : "Impressum & Datenschutz"
+  url                    : "/impressum-datenschutz/"
 comments:
   provider               : "staticman_v2" # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "staticman_v2" "custom"
   disqus:
