cleaned address from imp, data

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,6 +4,7 @@ holger_kral:
   name: "Holger Kral"
   address1: "Ansbacher Str. 67"
   address2: "10777 Berlin"
+  address3: "Berlin"
   tel: +49 179 53 47 135
   email: "developer4223@gmail.com"
   bio: "lerning all about data"
