--- a/staticman.yml
+++ b/staticman.yml
@@ -30,6 +30,7 @@ comments:
   # Name of the branch being used. Must match the one sent in the URL of the
   # request.
   branch: "master"
+  endpoint: "https://api.staticman.net/v3/entry/github/"
 
   commitMessage: "New comment by {fields.name}"
 
