--- a/staticman.yml
+++ b/staticman.yml
@@ -78,7 +78,7 @@ comments:
     enabled: true
 
     # FROM email address
-    fromAddress: "no-reply@ondata.work"
+    fromAddress: "Thank you <no-reply@ondata.work>"
 
     # (!) ENCRYPTED
     #
