config for excluding drafts on live

--- a/_config_prod.yml
+++ b/_config_prod.yml
@@ -42,8 +42,6 @@ exclude:
   - test # ignore Minimal Mistakes /test
   - _posts/__notes.md
   - robots.txt
-  - _posts/2018-08-14-geborgenheit-und-mit-in-daten.md
-  - _posts/2018-11-25-mit-weniger-daten-kochen.md
-  - _posts/2019-08-19-was-verbindet-uns.md
+  - _posts/*_DRAFT.md
 
 google_site_verification : 1TwKH7c-QhYqXsr6rCuld0ck3tE6BQvFVn-SCaBzNzY
